<resources>
    <string name="app_name">Fineract 2.0</string>
    <string name="enter_you_credentials">Please enter your credentials</string>
    <string name="tenant">Tenant</string>
    <string name="fineract">Fineract</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fineract_account">Fineract Account</string>
    <string name="welcome">Welcome</string>
    <string name="no_internet_connection">No Internet found. Check your connection</string>
    <string name="or_try_again">or try again</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="customer">Customer</string>
    <string name="dashboard">Dashboard</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="customers">Customers</string>
    <string name="financial_products">Financial products</string>
    <string name="manage_loan_accounts">Manage loan accounts</string>
    <string name="loan_accounts">Loan accounts</string>
    <string name="loan_account">Loan account</string>
    <string name="deposit_accounts">Deposit accounts</string>
    <string name="payroll">Payroll</string>
    <string name="roles_and_permissions">Roles/Permissions</string>
    <string name="manage_deposit_accounts">Manage deposit accounts</string>
    <string name="manage_payroll">Manage payroll</string>
    <string name="contact_information">Contact information</string>
    <string name="address">Address</string>
    <string name="current_status">Current status</string>
    <string name="management">Management</string>
    <string name="identification_cards">Identification cards</string>
    <string name="identification_card">Identification card</string>
    <string name="view_identification_card">View identification cards</string>
    <string name="tasks">Tasks</string>
    <string name="change_customer_status">Change the status of customer</string>
    <string name="activities">Activities</string>
    <string name="recent_activities">Recent activities</string>
    <string name="birthday">Birthday</string>
    <string name="assigned_employee">Assigned Employee </string>
    <string name="assigned_employee_list">Assigned Employee: %1$s</string>
    <string name="not_assigned">Not assigned</string>
    <string name="no_contact_details_available">No Contact details available</string>
    <string name="empty_customer_list">Empty customer list</string>
    <string name="empty_customer_loans">Empty customer loans list</string>
    <string name="empty_planned_payments">Empty planned payment list</string>
    <string name="no_more_customer_available">No more customer available</string>
    <string name="no_more_loans_available">No more loans available</string>
    <string name="no_more_planned_payment_available">No more planned payment available</string>
    <string name="account_identifier">Account identifier</string>
    <string name="last_modified_on">Last modified on</string>
    <string name="last_modified_by">Last modified by</string>
    <string name="disburse_loan">DISBURSE LOAN</string>
    <string name="details">Details</string>
    <string name="principal_amount">Principal amount</string>
    <string name="payment_cycle">Payment cycle</string>
    <string name="term">Term</string>
    <string name="planned_payment">Planned Payment</string>
    <string name="planned_payments">Planned Payments</string>
    <string name="view_payments">View payments</string>
    <string name="debt_income_report">Debt Income Report</string>
    <string name="view_debt_income_report">View debt income report</string>
    <string name="customer_loan_approved">Customer loan approved</string>
    <string name="to_activate_loan_disburse">To activate this loan you need to disburse</string>
    <string name="payment_cycle_value">Repay every %1$d %2$s on the %3$d day</string>
    <string name="payment_cycle_month_day">Repay every %1$d %2$s on the %3$s day</string>
    <string name="payment_cycle_month_day_week">Repay every %1$d %2$s on the %3$s %4$s</string>
    <string name="payment_cycle_week">Repay every %1$d %2$s on %3$s</string>
    <string name="payment_cycle_year_day">Repay every %1$d %2$s on the %3$s day in %4$s</string>
    <string name="payment_cycle_year_day_week">Repay every %1$d %2$s on the %3$s %4$s in %5$s</string>
    <string name="syncing_please_wait">Please wait while we fetch data from server, will update you once its done</string>
    <string name="no_customer_sync">No Customers to Sync</string>
    <string name="account">Account</string>
    <string name="balance">Balance</string>
    <string name="beneficiaries">Beneficiaries</string>
    <string name="proportional">Proportional</string>
    <string name="payroll_configuration">Payroll Configuration</string>
    <string name="payroll_allocation">Payroll Allocation</string>
    <string name="no_payroll_allocation">No Payroll Allocation</string>
    <string name="deposit_account">Deposit account</string>
    <string name="deposit_product">Deposit product</string>
    <string name="remaining_principal">Remaining principal</string>
    <string name="load_payment">Load Payment</string>
    <string name="short_name">Short name</string>
    <string name="repay_every">Repay every</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="products">Products</string>
    <string name="ledger">Ledgers</string>
    <string name="accounts">Accounts</string>
    <string name="day">Day</string>
    <string name="in">In</string>
    <string name="required">Required</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="add_debt">Add Debt</string>
    <string name="add_document">Add Document</string>
    <string name="add_income">Add Income</string>
    <string name="cancel">Cancel</string>
    <string name="total_debt">Debts(Total: %1$s)</string>
    <string name="total_income">Income(Total: %1$s)</string>
    <string name="no_debt_to_show">No debts to show. add debt</string>
    <string name="no_income_to_show">No income to show. add income</string>
    <string name="ratio">Ratio: %1$s</string>
    <string name="edit_debt">Edit Debt</string>
    <string name="edit_loan">Edit loan</string>
    <string name="edit_income">Edit Income</string>
    <string name="debt_income">Debt Income</string>
    <string name="name">Name</string>
    <string name="browse">Browse…</string>
    <string name="fetching_customer_please_wait">Fetching customer please wait…</string>
    <string name="creating_loan_please_wait">Creating loan please wait…</string>
    <string name="updating_loan_please_wait">Updating loan please wait…</string>
    <string name="updating_customer_please_wait">Updating customer please wait…</string>
    <string name="creating_customer_please_wait">Creating customer please wait…</string>
    <string name="creating_identification_card_please_wait">Creating identification card please wait…</string>
    <string name="updating_identification_card_please_wait">Updating identification card please wait…</string>
    <string name="creating_deposit_account">Creating deposit account please wait…</string>
    <string name="updating_deposit_account">Updating deposit account please wait…</string>
    <string name="on">on</string>
    <string name="on_the">on the</string>
    <string name="is_member">Is member?</string>
    <string name="create_customer">Create Customer</string>
    <string name="edit_customer">Edit customer</string>
    <string name="edit_payroll">Edit payroll</string>
    <string name="create_new_identification">Create new Identification</string>
    <string name="create_new_deposit">Create new deposit</string>
    <string name="update_deposit">Update deposit</string>
    <string name="edit_identification">Edit Identification</string>
    <string name="unique_required">Unique, Required</string>
    <string name="create_edit_customer_for_offices">create/edit customer for your offices</string>
    <string name="view_customer">View Customer</string>
    <string name="create_new_customer">Create new customer</string>
    <string name="lock">Lock</string>
    <string name="close">Close</string>
    <string name="activate">Activate</string>
    <string name="un_lock">Unlock</string>
    <string name="reopen">Reopen</string>
    <string name="please_verify_following_task">Please verify the following tasks before you can %1$s this customer</string>
    <string name="updating_status">Updating status</string>
    <string name="task_updated_successfully">Task updated successfully</string>
    <string name="view_debt_income_ratio">View debt income ratio</string>
    <string name="customer_ratio">Customer \n (Ratio: %1$s)</string>
    <string name="co_signer_ratio">Co-signer \n (Ratio: %1$s)</string>
    <string name="identification_issuer">Issuer: %1$s</string>
    <string name="number">Number</string>
    <string name="type">Type</string>
    <string name="issuer">Issuer</string>
    <string name="expiration_date">Expiration date</string>
    <string name="scans_uploaded">Scans uploaded</string>
    <string name="loading_scans_please_wait">Loading scans please wait…</string>
    <string name="identifier">Identifier</string>
    <string name="selected_file">Selected file</string>
    <string name="upload_new_identification_card_scan">Upload new Identification card scan</string>
    <string name="upload">Upload</string>
    <string name="package_name" translatable="false">package</string>
    <string name="scan_file">scanFile.png</string>
    <string name="uploading_identification_scan_card">Uploading identification scan card…</string>
    <string name="identification_deleted_successfully">Identification card deleted successfully</string>
    <string name="identification_card_scan_deleted_successfully">Identification card scan deleted successfully</string>
    <string name="deleting_identification_card">Deleting identification card</string>
    <string name="share_customer_profile">Share profile</string>
    <string name="edit_customer_profile">Edit customer profile</string>
    <string name="remove">Remove</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="edit_selected_file">Selected file:</string>
    <string name="no_file_selected_yet">No file selected yet.</string>
    <string name="choose_file">Choose a file (max size 512 KB)</string>
    <string name="take_photo">Take photo (max size 512 KB)</string>
    <string name="are_sure_want_remove_portrait">Are you sure? you want to delete portrait.</string>
    <string name="delete">Delete</string>
    <string name="uploading_portrait">Uploading portrait please wait…</string>
    <string name="deleting_portrait">Deleting portrait please wait…</string>
    <string name="logout">Logout</string>
    <string name="teller">Tellers</string>
    <string name="groups">Groups</string>
    <string name="leaders">Leaders</string>
    <string name="members">Members</string>
    <string name="office">Office</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="group_definition_identifier">Group Definition Identifier</string>
    <string name="required_number">Number*</string>
    <string name="required_type">Type*</string>
    <string name="required_expiration_date">Expiration date*</string>
    <string name="required_issuer">Issuer*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="customer_payloads">Customer Payloads</string>
</resources>