<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_loan_details"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:visibility="visible">

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ncv_loan_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_financial_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_padding_8dp"
            android:layout_marginTop="@dimen/layout_padding_8dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding_24dp">

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/required_number" />

                <TextView
                    android:id="@+id/tv_number"
                    style="@style/TextViewReview.Input"
                    android:text="@string/number" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/required_type" />

                <TextView
                    android:id="@+id/tv_type"
                    style="@style/TextViewReview.Input"
                    android:text="@string/type" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/required_expiration_date" />

                <TextView
                    android:id="@+id/tv_expiration_date"
                    style="@style/TextViewReview.Input"
                    android:drawableLeft="@drawable/ic_event_black_24dp"
                    android:drawablePadding="@dimen/layout_padding_16dp"
                    android:drawableStart="@drawable/ic_event_black_24dp"
                    android:text="@string/expiration_date" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/required_issuer" />

                <TextView
                    android:id="@+id/tv_issuer"
                    style="@style/TextViewReview.Input"
                    android:text="@string/issuer" />

                <View style="@style/TextViewUnderline.Grey" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>