<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <LinearLayout
                    android:id="@+id/llHeadOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding_16dp"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/layout_padding_8dp"
                        android:layout_marginRight="@dimen/layout_padding_8dp"
                        android:background="@drawable/review_circle_bg"
                        android:gravity="center"
                        android:text="@string/one"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/tvHeadOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/identifier" />

                <TextView
                    android:id="@+id/tvIdentifier"
                    style="@style/TextViewReview.Input"
                    android:textColor="@color/black" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/group_definition_identifier" />

                <TextView
                    android:id="@+id/tvGroupDefinitionIdentifier"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/office" />

                <TextView
                    android:id="@+id/tvOffice"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/assigned_employee" />

                <TextView
                    android:id="@+id/tvAssignedEmployee"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <LinearLayout
                    android:id="@+id/llHeadTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding_16dp"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/layout_padding_8dp"
                        android:layout_marginRight="@dimen/layout_padding_8dp"
                        android:background="@drawable/review_circle_bg"
                        android:gravity="center"
                        android:text="@string/two"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/tvHeadTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewReview.Head"
                    android:paddingTop="@dimen/layout_padding_8dp"
                    android:text="@string/members" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_padding_12dp"
                    android:layout_marginBottom="@dimen/layout_padding_12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_name_list" />

                <View style="@style/TextViewUnderline.Grey" />

                <LinearLayout
                    android:id="@+id/llHeadThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding_16dp"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/layout_padding_8dp"
                        android:layout_marginRight="@dimen/layout_padding_8dp"
                        android:background="@drawable/review_circle_bg"
                        android:gravity="center"
                        android:text="@string/three"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/tvHeadThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewReview.Head"
                    android:paddingTop="@dimen/layout_padding_8dp"
                    android:text="@string/leaders" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_leaders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_padding_12dp"
                    android:layout_marginBottom="@dimen/layout_padding_12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_name_list" />

                <View style="@style/TextViewUnderline.Grey" />

                <LinearLayout
                    android:id="@+id/llHeadFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding_16dp"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/layout_padding_8dp"
                        android:layout_marginRight="@dimen/layout_padding_8dp"
                        android:background="@drawable/review_circle_bg"
                        android:gravity="center"
                        android:text="@string/four"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12sp" />

                    <TextView
                        android:id="@+id/tvHeadFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/street" />

                <TextView
                    android:id="@+id/tvStreet"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/city" />

                <TextView
                    android:id="@+id/tvCity"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/region" />

                <TextView
                    android:id="@+id/tvRegion"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/postal_code" />

                <TextView
                    android:id="@+id/tvPostalCode"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/country" />

                <TextView
                    android:id="@+id/tvCountry"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>