<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ImageView
        android:adjustViewBounds="true"
        android:layout_gravity="start"
        android:layout_height="75dp"
        android:layout_width="wrap_content"
        android:src="@drawable/mifos_logo"
        android:contentDescription="@string/mifos_logo_image"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/enter_you_credentials"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/et_tenant"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:drawableLeft="@drawable/ic_tenant_black_24dp"
                android:drawableStart="@drawable/ic_tenant_black_24dp"
                android:hint="@string/tenant"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/et_username"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/username"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/et_password"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:drawableLeft="@drawable/ic_password_black_24dp"
                android:drawableStart="@drawable/ic_password_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:text="@string/login"
    />

</LinearLayout>