<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/llAddMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_padding_12dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding_16dp">

    <TextView
        android:id="@+id/tv_member_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_member"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="@dimen/layout_padding_16dp"
        />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNewMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_padding_16dp"
            android:gravity="right">

            <Button
                android:id="@+id/btnCancelAddMember"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="@dimen/text_size_14sp" />

            <Button
                android:id="@+id/btnAddMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>
</LinearLayout>